<resources>
    <string name="app_name">MySpendyApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!--<string name="hello_blank_fragment">Hello blank fragment</string> -->
    <string name="title_spending">Spending</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Các String mới thêm vào -->
    <string name="app_logo">App Logo</string>
    <string name="app_name1">App Name</string>
    <string name="quen_mat_khau">Quên mật khẩu</string>

    <string name="title_income_expense">Thu chi</string>
    <string name="balance">Số dư</string>
    <string name="income">Thu</string>
    <string name="expense">Chi</string>
    <string name="username">Tên đăng nhập</string>
    <string name="nhap_username">Nhập tên đăng nhập</string>
    <string name="phonenumber">Số điện thoaị</string>
    <string name="nhap_phonenumber">Nhập số điện thoại</string>
    <string name="email">Email</string>
    <string name="nhap_email">Nhập email</string>
    <string name="password">Mật khẩu</string>
    <string name="nhap_password">Nhập mật khẩu</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="nhap_confirm_password">Xác nhận mật khẩu</string>
    <string name="register">Đăng ký</string>
    <string name="da_co_tai_khoan">Đã có tài khoản?</string>
    <string name="login">Đăng nhập</string>
    <string name="nhap_username_phonenumber">Nhập số điện thoại hoặc username</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="dang_nhap_bang">Hoặc đăng nhập bằng</string>
    <string name="neu_chua_co_tai_khoan">Nếu bạn chưa có tài khoản?</string>
    <string name="login_here">Đăng ký tại đây</string>
    <string name="home">Trang chủ</string>
    <string name="date">Ngày</string>
    <string name="week">Tuần</string>
    <string name="month">Tháng</string>
    <string name="bieu_do_thu_chi">Bieu do thu chi</string>
    <string name="create_category">Tạo danh mục mới</string>
    <string name="category_type">Loại danh mục</string>
    <string name="select_category">Chọn loại danh mục</string>
    <string name="category_name">Tên danh mục</string>
    <string name="icon">Icon</string>
    <string name="select_icon">Chọn icon</string>
    <string name="color">Màu sắc</string>
    <string name="select_color">Chọn màu sắc</string>
    <string name="cancel">Huỷ</string>
    <string name="save">Lưu</string>

</resources>