<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo" />

        <!-- App Name -->
        <ImageView
            android:id="@+id/appName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:src="@drawable/spendy" />

        <!-- Username label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/username"
            android:textColor="@color/main_green"
            android:textStyle="bold" />

        <!-- Username input -->
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nhap_username"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical" />
        <!-- PhoneNumber label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/phonenumber"
            android:textColor="@color/main_green"
            android:textStyle="bold" />

        <!-- PhoneNumber input -->
        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nhap_phonenumber"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"/>
        <!-- Email label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/email"
            android:textColor="@color/main_green"
            android:textStyle="bold" />

        <!-- Email input -->
        <EditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nhap_email"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"/>

        <!-- Password label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/password"
            android:textColor="@color/main_green"
            android:textStyle="bold" />

        <!-- Password input -->
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nhap_password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_eye_close"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"/>
        <!-- RePassword label -->
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/confirm_password"
            android:textColor="@color/main_green"
            android:textStyle="bold" />

        <!-- RePassword input -->
        <EditText
            android:id="@+id/edtRePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nhap_confirm_password"
            android:inputType="textPassword"
            android:background="@drawable/edittext_border"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_eye_close"
            android:drawablePadding="10dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_vertical"/>

        <!-- Login button -->
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main_green"
            android:fontFamily="@font/baloo2_medium"
            android:text="@string/register"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />
        <!-- Login -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/da_co_tai_khoan" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/baloo2_medium"
            android:text="@string/login"
            android:textColor="@color/main_green" />

    </LinearLayout>
</ScrollView>