<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49B59D">

    <!-- ===== TITLE ===== -->
    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_income_expense"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp" />

    <!-- ===== CONTENT ===== -->
    <ScrollView
        android:layout_below="@id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- ===== BALANCE ===== -->
            <LinearLayout
                android:id="@+id/layoutBalance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_card"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tvBalanceLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/balance"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/tvBalanceValue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0 VND"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:gravity="center" />
            </LinearLayout>

            <!-- ===== INCOME / EXPENSE ===== -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <!-- INCOME -->
                <LinearLayout
                    android:id="@+id/layoutIncome"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="#2A6DF4"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvIncomeLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/income"
                        android:textColor="#FFFFFF"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvIncomeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 VND"
                        android:textColor="#FFFFFF"/>
                </LinearLayout>

                <View
                    android:layout_width="12dp"
                    android:layout_height="1dp"/>

                <!-- EXPENSE -->
                <LinearLayout
                    android:id="@+id/layoutExpense"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_white_card"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvExpenseLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/expense"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvExpenseValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 VND"/>
                </LinearLayout>
            </LinearLayout>

            <!-- ===== TRANSACTION LIST ===== Hiện Tháng  -->
            <TextView
                android:id="@+id/tvMonth"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"/>

            <RecyclerView
                android:id="@+id/rvTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"/>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
